# staticgen

./: Cargo.toml  README.md
resources/test/: testdata_fn_expected.rs  testdata_input.ron  testdata_types_expected.rs
src/: lib.rs  model.rs  ser.rs
src/ser/: dummy.rs  map_serializer.rs  seq_serializer.rs  struct_serializer.rs  struct_util.rs  struct_variant_serializer.rs  test.rs  tuple_serializer.rs  tuple_struct_serializer.rs  tuple_util.rs  tuple_variant_serializer.rs
src/ser/map_serializer/: key_serializer.rs
